--- a/views/map.erb
+++ b/views/map.erb
@@ -34,15 +34,229 @@
         <div class="map">
             <div class="map-image">
                 <div id="map-content1" class="map-content" style="display: block;">
-                <div class="map-"><img src="/assets/images/map/1.webp" class="each-map"></div>
+                <div class="map-scroll">
+                    <div class="map-image">
+                    <img src="/assets/images/map/1.webp" class="each-map">
+                    <div class="booth-container">
+                        <div class="map-element" style="top:21%;left: 50%;width: 11%; height: 14%;">
+                            <div class="map-link-room">中庭</div>
+                            <div class="map-link-name">
+                                金券販売
+                            </div>
+                        </div>
+                        <div class="map-element" style="top:21%;left: 61%;width: 10%; height: 14%;">
+                            <div class="map-link-room">屋台</div>
+                            <div class="map-link-name">
+                                わたあめ<br>かき氷
+                            </div>
+                        </div>
+                        <div class="map-element" style="top:21%;left: 71%;width: 10%; height: 14%;">
+                            <div class="map-link-room">屋台</div>
+                            <div class="map-link-name">
+                                からあげ
+                            </div>
+                        </div>
+                        <div class="map-element" style="top:21%;left: 81%;width: 10%; height: 14%;">
+                            <div class="map-link-room">屋台</div>
+                            <div class="map-link-name">
+                                たこやき
+                            </div>
+                        </div>
+                        <div class="map-element" style="top:40%;left: 30%;width: 20%; height: 20%;">
+                            <div class="map-link-room"></div>
+                            <div class="map-link-name">
+                                中央ステージ
+                            </div>
+                        </div>
+                    </div>
+                    </div></div>
                 </div>
                 
                 
-                <div id="map-content2" class="map-content">コンテンツ2</div>
-                <div id="map-content3" class="map-content">コンテンツ3</div>
-                <div id="map-content4" class="map-content">コンテンツ4</div>
-                <div id="map-content5" class="map-content">コンテンツ5</div>
-                <div id="map-content6" class="map-content">コンテンツ6</div>
+                <div id="map-content2" class="map-content">
+                    <div class="map-scroll">
+                        <div class="map-image">
+                            <img src="/assets/images/map/2.webp" class="each-map">
+                            <div class="booth-container">
+                                <div class="map-element" style="top: 0px;left: 23.5294%;width: 11.7647%;height: 16%;">
+                                    <div class="map-link-room">3-D</div>
+                                    <div class="map-link-name">
+                                    <h3 class="circle_p_name green"><span>D-3</span></h3>
+                                    <h3 class="circle_p_name red"><span>A-3</span></h3>
+                                    </div>
+                                </div>
+                                <div class="map-element" style="left: 35.294117647058826%;width: 11.764705882352942%; height: 16%;">
+                                    <div class="map-link-room">3-C</div>
+                                    <div class="map-link-name">
+                                    休憩室
+                                    </div>
+                                </div>
+                                <div class="map-element" style="left: 46.9%;width: 11.764705882352942%; height: 16%;">
+                                    <div class="map-link-room">3-B</div>
+                                    <div class="map-link-name">
+                                    <h3 class="circle_p_name red"><span>A-4</span></h3>
+                                    </div>
+                                </div>
+                                <div class="map-element" style="top: 0px;left: 70.5882%;width: 11.7647%;height: 16%;">
+                                    <div class="map-link-room">3-A</div>
+                                    <div class="map-link-name">
+                                    <h3 class="circle_p_name red"><span>A-4</span></h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="map-content3" class="map-content"><div class="map-scroll">
+                        <div class="map-image">
+                            <img src="/assets/images/map/3.webp" class="each-map">
+                            <div class="booth-container">
+                            <div class="map-element" style="top: 0px;left: 0%;width: 11.7647%;height: 16%;">
+                                    <div class="map-link-room">日本史教室</div>
+                                    <div class="map-link-name">
+                                    <h3 class="circle_p_name green"><span>C-3</span></h3>
+                                    </div>
+                                </div>
+                                <div class="map-element" style="top: 0px;left: 23.5294%;width: 11.7647%;height: 16%;">
+                                    <div class="map-link-room">2-D</div>
+                                    <div class="map-link-name">
+                                    <h3 class="circle_p_name red"><span>A-7</span></h3>
+                                    </div>
+                                </div>
+                                <div class="map-element" style="left: 35.294117647058826%;width: 11.764705882352942%; height: 16%;">
+                                    <div class="map-link-room">2-C</div>
+                                    <div class="map-link-name">
+                                    <h3 class="circle_p_name green"><span>D-5</span></h3>
+                                    <h3 class="circle_p_name yellow"><span>C-1</span></h3>
+                                    </div>
+                                </div>
+                                <div class="map-element" style="left: 46.9%;width: 11.764705882352942%; height: 16%;">
+                                    <div class="map-link-room">2-B</div>
+                                    <div class="map-link-name">
+                                    <h3 class="circle_p_name red"><span>A-8</span></h3>
+                                    </div>
+                                </div>
+                                <div class="map-element" style="top: 0px;left: 70.5882%;width: 11.7647%;height: 16%;">
+                                    <div class="map-link-room">2-A</div>
+                                    <div class="map-link-name">
+                                    <h3 class="circle_p_name red"><span>A-8</span></h3>
+                                    </div>
+                                </div>
+                                <div class="map-element" style="bottom: 0px;left: 0%;width: 17.6471%;height: 21%;">
+                                    <div class="map-link-room">化学実験室</div>
+                                    <div class="map-link-name">
+                                    <h3 class="circle_p_name yellow"><span>C-8</span></h3>
+                                    </div>
+                                </div>
+                                <div class="map-element" style="bottom: 5%;left: 29.4118%;width: 11.7647%;height: 16%;">
+                                    <div class="map-link-room">化学講義室</div>
+                                    <div class="map-link-name">
+                                    <h3 class="circle_p_name red"><span>A-8</span></h3>
+                                    </div>
+                                </div>
+                                <div class="map-element" style="bottom: 5%;left: 41.1765%;width: 17.6471%;height: 16%;">
+                                    <div class="map-link-room">合併教室</div>
+                                    <div class="map-link-name">
+                                    <h3 class="circle_p_name red"><span>A-8</span></h3>
+                                    </div>
+                                </div>
+                                <div class="map-element" style="bottom: 0px;left: 88.2353%;width: 11.7647%;height: 21%;">
+                                    <div class="map-link-room">図書室</div>
+                                    <div class="map-link-name">
+                                    <h3 class="circle_p_name red"><span>A-8</span></h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="map-content4" class="map-content"><div class="map-scroll">
+                        <div class="map-image">
+                            <img src="/assets/images/map/4.webp" class="each-map">
+                            <div class="booth-container">
+                                <div class="map-element" style="top: 0px;left: 23.5294%;width: 11.7647%;height: 16%;">
+                                    <div class="map-link-room">1-D</div>
+                                    <div class="map-link-name">
+                                    <h3 class="circle_p_name green"><span>D-4</span></h3>
+                                    </div>
+                                </div>
+                                <div class="map-element" style="left: 35.294117647058826%;width: 11.764705882352942%; height: 16%;">
+                                    <div class="map-link-room">1-C</div>
+                                    <div class="map-link-name">
+                                    <h3 class="circle_p_name yellow"><span>C-7</span></h3>
+                                    <h3 class="circle_p_name yellow"><span>C-5</span></h3>
+                                    </div>
+                                </div>
+                                <div class="map-element" style="left: 46.9%;width: 11.764705882352942%; height: 16%;">
+                                    <div class="map-link-room">1-B</div>
+                                    <div class="map-link-name">
+                                    <h3 class="circle_p_name green"><span>D-6</span></h3>
+                                    </div>
+                                </div>
+                                <div class="map-element" style="top: 0px;left: 70.5882%;width: 11.7647%;height: 16%;">
+                                    <div class="map-link-room">1-A</div>
+                                    <div class="map-link-name">
+                                    <h3 class="circle_p_name green"><span>D-8</span></h3>
+                                    </div>
+                                </div>
+                                <div class="map-element" style="bottom: 0px;left: 0%;width: 17.6471%;height: 21%;">
+                                    <div class="map-link-room">生物実験室</div>
+                                    <div class="map-link-name">
+                                    <h3 class="circle_long_element yellow"><span class="long-element">C-10</span></h3>
+                                    </div>
+                                </div>
+                                <div class="map-element" style="bottom: 5%;left: 29.4118%;width: 11.7647%;height: 16%;">
+                                    <div class="map-link-room">生物講義室</div>
+                                    <div class="map-link-name">
+                                    <h3 class="circle_p_name green"><span>D-2</span></h3>
+                                    <h3 class="circle_p_name yellow"><span>C-4</span></h3>
+                                    </div>
+                                </div>
+                                <div class="map-element" style="bottom: 5%;left: 41.1765%;width: 17.6471%;height: 16%;">
+                                    <div class="map-link-room">世界史教室</div>
+                                    <div class="map-link-name">
+                                    <h3 class="circle_p_name red"><span>A-8</span></h3>
+                                    </div>
+                                </div>
+                                <div class="map-element" style="bottom: 0px;left: 88.2353%;width: 11.7647%;height: 21%;">
+                                    <div class="map-link-room">美術教室</div>
+                                    <div class="map-link-name">
+                                    <h3 class="circle_p_name red"><span>A-8</span></h3>
+                                    </div>
+                                </div>
+                            </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="map-content5" class="map-content"><div class="map-scroll">
+                        <div class="map-image">
+                            <img src="/assets/images/map/5.webp" class="each-map">
+                            <div class="booth-container">
+                            <div class="map-element" style="bottom: 5%;left: 29.4118%;width: 11.7647%;height: 16%;">
+                                    <div class="map-link-room">物理講義室</div>
+                                    <div class="map-link-name">
+                                    <h3 class="circle_p_name green"><span>D-1</span></h3>
+                                    </div>
+                                </div>
+                                <div class="map-element" style="bottom: 5%;left: 41.1765%;width: 17.6471%;height: 16%;">
+                                    <div class="map-link-room">視聴覚室</div>
+                                    <div class="map-link-name">
+                                    <h3 class="circle_p_name yellow"><span>C-9</span></h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <%# <div id="map-content6" class="map-content"><div class="map-scroll">
+                        <div class="map-image">
+                            <img src="/assets/images/map/6.webp" class="each-map">
+                            <div class="booth-container">
+                            </div>
+                        </div>
+                    </div>
+                </div> %>
             </div>
             <div class="button-container">
             <button class="button" onclick="showDiv(1)" id="button1">南1F</button>
@@ -50,7 +264,7 @@
             <button class="button" onclick="showDiv(3)" id="button3">南3F/北2F</button>
             <button class="button" onclick="showDiv(4)" id="button4">南4F/北3F</button>
             <button class="button" onclick="showDiv(5)" id="button5">北4F</button>
-            <button class="button" onclick="showDiv(6)" id="button6">運動場</button>
+            <%# <button class="button" onclick="showDiv(6)" id="button6">運動場</button> %>
             </div>
         </div>
     </div>
@@ -59,7 +273,7 @@
 <script>
     function showDiv(index) {
         // すべてのコンテンツを非表示にする
-        for (var i = 1; i <= 6; i++) {
+        for (var i = 1; i <= 5; i++) {
             var content = document.getElementById('map-content' + i);
             content.style.display = 'none';
 
