脱出ゲーム追加

--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -57,7 +57,7 @@
             <td></td>
             <td rowspan="8" class="time-event-left">
               <span class="time-start">9:00~</span>
-              個人演奏１
+              <a href="/ongakukai">個人演奏１</a>
               <span class="time-end">~9:40</span>
             </td>
             <td></td>
@@ -118,7 +118,7 @@
             <td rowspan="6" class="time-event">
               <span class="time-start">9:30~</span>
               <span class="time-end">~10:00</span>
-              chatGPTを使った<br>プログラミング実演
+              <a href="/pcdoukoukai">chatGPTを使った<br>プログラミング実演</a>
             </td>
             <td></td>
             <td></td>
@@ -150,7 +150,7 @@
             <td rowspan="5" class="time-event-left">
               <span class="time-start">9:45~</span>
               <span class="time-end">~10:00</span>
-              1年クラス合唱</td>
+              <a href="/ongakukai">1年クラス合唱</a></td>
             <td></td>
             <td></td>
             <td></td>
@@ -205,7 +205,7 @@
             <td rowspan="9" class="time-event">
               <span class="time-start">10:15~</span>
               <span class="time-end">~11:00</span>
-              個人演奏２
+              <a href="/ongakukai">個人演奏２</a>
             </td>
             <td></td>
             <td></td>
@@ -239,7 +239,7 @@
             <td rowspan="6" class="time-event">
               <span class="time-start">10:30~</span>
               <span class="time-end">~11:00</span>
-              アルゴリズム講義
+              <a href="/pcdoukoukai">アルゴリズム講義</a>
             </td>
             <td></td>
             <td></td>
@@ -310,7 +310,7 @@
             <td rowspan="6" class="time-event-left">
               <span class="time-start">11:05~</span>
               <span class="time-end">~11:35</span>
-              2年クラス合唱</td>
+              <a href="/ongakukai">2年クラス合唱</a></td>
             <td></td>
             <td></td>
             <td></td>
@@ -373,7 +373,7 @@
             <td rowspan="7" class="time-event-left">
               <span class="time-start">11:40~</span>
               <span class="time-end">~12:15</span>
-              個人演奏３</td>
+              <a href="/ongakukai">個人演奏３</a></td>
             <td rowspan="2" class="time-event">
               <span class="time-start">11:40~</span>
               <span class="time-end">~11:50</span>
@@ -445,7 +445,7 @@
             <td rowspan="4" class="time-event-left">
               <span class="time-start">12:20~</span>
               <span class="time-end">~12:40</span>
-              3年クラス合唱</td>
+              <a href="/ongakukai">3年クラス合唱</a></td>
             <td></td>
             <td></td>
             <td></td>
@@ -500,7 +500,7 @@
             <td rowspan="4" class="time-event-left">
               <span class="time-start">12:45~</span>
               <span class="time-end">~13:05</span>
-              グリー部</td>
+              <a href="/guri">グリー部</a></td>
             <td></td>
             <td></td>
             <td></td>
@@ -526,7 +526,7 @@
             <td rowspan="6" class="time-event">
               <span class="time-start">13:00~</span>
               <span class="time-end">~13:30</span>
-              アルゴリズム講義
+              <a href="/pcdoukoukai">アルゴリズム講義</a>
             </td>
             <td rowspan="2" class="time-event">
               <span class="time-start">13:00~</span>
@@ -566,7 +566,7 @@
             <td rowspan="3" class="time-event">
               <span class="time-start">13:20~</span>
               <span class="time-end">~13:35</span>
-              アンサンブル部</td>
+              <a href="/annsannburubu">アンサンブル部</a></td>
             <td></td>
             <td></td>
             <td></td>
@@ -613,7 +613,7 @@
             <td rowspan="4" class="time-event-left">
               <span class="time-start">13:40~</span>
               <span class="time-end">~14:00</span>
-              表彰式</td>
+              <a href="/ongakukai">表彰式</a></td>
             <td></td>
             <td></td>
             <td></td>
@@ -646,7 +646,7 @@
             <td rowspan="6" class="time-event">
               <span class="time-start">14:00~</span>
               <span class="time-end">~14:30</span>
-              chatGPTを使った<br>プログラミング実演
+              <a href="/pcdoukoukai">chatGPTを使った<br>プログラミング実演</a>
             </td>
             <td></td>
             <td rowspan="2" class="time-event">
