--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -126,7 +126,7 @@
             <td rowspan="8" class="time-event">
               <span class="time-start">9:30~</span>
               <span class="time-end">~10:10</span>
-              連続爆破事件<br>からの脱出<br>1
+              <a href="/dassyutu">連続爆破事件<br>からの脱出<br>1</a>
             </td>
             <td></td>
             <td></td>
@@ -223,7 +223,7 @@
             <td rowspan="4" class="time-event">
               <span class="time-start">10:20~</span>
               <span class="time-end">~10:40</span>
-              とある<br>秘密倉庫からの脱出<br>1</td>
+              <a href="/dassyutu">とある<br>秘密倉庫からの脱出<br>1</a></td>
             <td></td>
           </tr>
           <tr>
@@ -297,11 +297,11 @@
             <td rowspan="8" class="time-event">
               <span class="time-start">11:00~</span>
               <span class="time-end">~11:40</span>
-              連続爆破事件<br>からの脱出<br>2</td>
+              <a href="/dassyutu">連続爆破事件<br>からの脱出<br>2</a></td>
             <td rowspan="4" class="time-event">
               <span class="time-start">11:00~</span>
               <span class="time-end">~10:20</span>
-              とある<br>秘密倉庫からの脱出<br>2</td>
+              <a href="/dassyutu">とある<br>秘密倉庫からの脱出<br>2</a></td>
             <td></td>
             <th rowspan="12" class="time-timer">11:00</th>
           </tr>
@@ -398,7 +398,7 @@
             <td rowspan="8" class="time-event">
               <span class="time-start">11:50~</span>
               <span class="time-end">~12:30</span>
-              連続爆破事件<br>からの脱出<br>3</td>
+              <a href="/dassyutu">連続爆破事件<br>からの脱出<br>3</a></td>
             <td></td>
             <td></td>
           </tr>
@@ -421,7 +421,7 @@
             <td rowspan="4" class="time-event">
               <span class="time-start">12:00~</span>
               <span class="time-end">~12:20</span>
-              とある<br>秘密倉庫からの脱出<br>3</td>
+              <a href="/dassyutu">とある<br>秘密倉庫からの脱出<br>3</a></td>
             <td rowspan="12" class="time-event"><span class="time-start">12:00~</span>Xｰmodel<br>ADDITIONAL<br>LIVE<br>2023<span class="time-end">~13:00</span></td>
             <th rowspan="12" class="time-timer">12:00</th>
           </tr>
@@ -489,11 +489,11 @@
             <td rowspan="8" class="time-event">
               <span class="time-start">12:40~</span>
               <span class="time-end">~13:20</span>
-              連続爆破事件<br>からの脱出<br>4</td>
+              <a href="/dassyutu">連続爆破事件<br>からの脱出<br>4</a></td>
             <td rowspan="4" class="time-event">
               <span class="time-start">12:40~</span>
               <span class="time-end">~13:00</span>
-              とある<br>秘密倉庫からの脱出<br>4</td>
+              <a href="/dassyutu">とある<br>秘密倉庫からの脱出<br>4</a></td>
           </tr>
           <tr>
             <td></td>
@@ -573,7 +573,7 @@
             <td rowspan="4" class="time-event">
               <span class="time-start">13:20~</span>
               <span class="time-end">~13:45</span>
-              とある<br>秘密倉庫からの脱出<br>5</td>
+              <a href="/dassyutu">とある<br>秘密倉庫からの脱出<br>5</a></td>
             <td></td>
           </tr>
           <tr>
@@ -594,12 +594,12 @@
             <td rowspan="8" class="time-event">
               <span class="time-start">13:30~</span>
               <span class="time-end">~14:10</span>
-              連続爆破事件<br>からの脱出<br>5
+              <a href="/dassyutu">連続爆破事件<br>からの脱出<br>5</a>
             </td>
             <td rowspan="12" class="time-event">
               <span class="time-start">13:30~</span>
               <span class="time-end">~14:30</span>
-              ESS部
+              <a href="/essbu">ESS部</a>
             </td>
           </tr>
           <tr>
@@ -658,7 +658,7 @@
             <td rowspan="4" class="time-event">
               <span class="time-start">14:00~</span>
               <span class="time-end">~14:20</span>
-              とある<br>秘密倉庫からの脱出<br>6</td>
+              <a href="/dassyutu">とある<br>秘密倉庫からの脱出<br>6</a></td>
             <th rowspan="12" class="time-timer time-bot">14:00</th>
           </tr>
           <tr>
@@ -693,7 +693,7 @@
             <td rowspan="8" class="time-event">
               <span class="time-start">14:20~</span>
               <span class="time-end">~15:00</span>
-              連続爆破事件<br>からの脱出<br>6</td>
+              <a href="/dassyutu">連続爆破事件<br>からの脱出<br>6</a></td>
             <td></td>
           </tr>
           <tr>
@@ -732,7 +732,7 @@
             <td rowspan="4" class="time-event">
               <span class="time-start">14:40~</span>
               <span class="time-end">~15:00</span>
-              とある<br>秘密倉庫からの脱出<br>7</td>
+              <a href="/dassyutu">とある<br>秘密倉庫からの脱出<br>7</a></td>
             <td></td>
           </tr>
           <tr>
