ええじゃないか

--- a/views/dassyutu.erb
+++ b/views/dassyutu.erb
@@ -102,7 +102,7 @@
 ・予約した方は、必ず開始<span style="text-decoration: underline; font-weight: bolder">５分前</span>に実施教室前に集合してください。<br>
 <br>
 <br>
-<span style="text-align: center">予告なく上記の内容が変更になる場合があります。<br>
+<span>予告なく上記の内容が変更になる場合があります。<br>
 ご不明なことがあれば、脱出ゲーム担当の生徒にお尋ねください。</span>
 </p>
 
