--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -41,13 +41,13 @@
         <table class="time-table">
           <tr>
             <th class="time-nonl positionsticky"></th>
-            <td class="time-title positionsticky">物理講義室</td>
-            <td class="time-title positionsticky" >講堂</td>
+            <td class="time-title positionsticky"><a href="/pcdoukoukai">物理講義室</a></td>
+            <td class="time-title positionsticky" ><a href="/ongakukai">講堂</a></td>
             <td class="time-title positionsticky">中央<br>ステージ</td>
             <td class="time-title positionsticky">バンド</td>
             <td class="time-title positionsticky">ルーム<br>コンサート</td>
-            <td class="time-title positionsticky">2A<br>脱出ゲーム</td>
-            <td class="time-title positionsticky">2B<br>脱出ゲーム</td>
+            <td class="time-title positionsticky"><a href="/dassyutu">2A<br>脱出ゲーム</a></td>
+            <td class="time-title positionsticky"><a href="/dassyutu">2B<br>脱出ゲーム</a></td>
             <td class="time-title positionsticky">視聴覚室</td>
             <th class="time-nonr positionsticky"></th>
           </tr>
