--- a/views/annsannburubu.erb
+++ b/views/annsannburubu.erb
@@ -32,7 +32,7 @@
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
          <span class="meta-loc">合併教室</span>
-         <a class="meta-button">マップ上で確認</a>
+         <a  href="/map" class="meta-button">マップ上で確認</a>
       </div>
    </div>
    <p class="circle-text">アンサンブル部ルームコンサートへようこそ!JPOPやクラシック、少人数〜大人数の様々な演奏をお届けします！</p><p class="circle-text">芸術棟 3F 合併教室にて生演奏でしか体験できない感動を是非！</p>
