--- a/views/bizyutubu.erb
+++ b/views/bizyutubu.erb
@@ -11,7 +11,7 @@
     }
   });
 </script>
-<script>
+   <script>
       (function(d) {
         var config = {
           kitId: 'bsw3okh',
@@ -24,39 +24,15 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/annsannburu.png" alt="美術部">
+         <img src="/assets/images/circle/bizyutu.jpg" alt="美術部">
       </div>
       <h1 class="circle-name">
         美術部
       </h1>
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
-         <span class="meta-loc">合併教室</span>
-         <a class="meta-button">マップ上で確認</a>
-      </div>
-   </div>
-   <p class="circle-text"><script>
-      (function(d) {
-        var config = {
-          kitId: 'bsw3okh',
-          scriptTimeout: 3000,
-          async: true
-        },
-        h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
-      })(document);
-    </script>
-<div class="circle-main">
-   <div class="circle-top">
-      <div class="circle-images">
-         <img src="/assets/images/circle/annsannburu.png" alt="美術部">
-      </div>
-      <h1 class="circle-name">
-        美術部
-      </h1>
-      <div class="circle-location">
-         <span class="meta-title">開催場所：</span>
-         <span class="meta-loc">美術室</span>
-         <a class="meta-button">マップ上で確認</a>
+         <span class="meta-loc">美術教室</span>
+         <a href="/map" class="meta-button">マップ上で確認</a>
       </div>
    </div>
    <p class="circle-text">今年の美術部は、各部員が約１年かけて音展のために制作した作品を展示します。
