--- a/views/bunngeibutosho.erb
+++ b/views/bunngeibutosho.erb
@@ -32,7 +32,7 @@
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
          <span class="meta-loc">図書室</span>
-         <a class="meta-button">マップ上で確認</a>
+         <a href="/map" class="meta-button">マップ上で確認</a>
       </div>
    </div>
    <p class="circle-text">今年も文芸部と図書委員の合同です。本の紹介ポスターを展示します。部誌も配布しております。</p><p class="circle-text">読書が好きな方、興味を持たれた方はぜひ訪れてみてください。</p>
