--- a/views/pcdoukoukai.erb
+++ b/views/pcdoukoukai.erb
@@ -11,3 +11,29 @@
     }
   });
 </script>
+<script>
+      (function(d) {
+        var config = {
+          kitId: 'bsw3okh',
+          scriptTimeout: 3000,
+          async: true
+        },
+        h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+      })(document);
+    </script>
+<div class="circle-main">
+   <div class="circle-top">
+      <div class="circle-images">
+         <img src="/assets/images/circle/pc.png" alt="物理部">
+      </div>
+      <p class="circle-name">
+        講義（PC同好会）
+      </p>
+      <div class="circles-location">
+         <span class="meta-title">開催場所：</span>
+         <span class="meta-loc">物理講義室</span>
+         <a href="/map" class="meta-button">マップ上で確認</a>
+      </div>
+   </div>
+     <p class="circle-text">今年のPC部では情報技術に関する講義、実演を行います！一コマ30分になりますが、面白い内容を用意しているので是非見に来てください！</p>
+</div>
