サークル完成

--- a/views/essbu.erb
+++ b/views/essbu.erb
@@ -32,7 +32,7 @@
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
          <span class="meta-loc">視聴覚室</span>
-         <a class="meta-button">マップ上で確認</a>
+         <a href="/map" class="meta-button">マップ上で確認</a>
       </div>
    </div>
    <p class="circle-text">昨年結成したTyphonsがパワーアップして帰ってきた...‼︎今年もスピーチ、ディベート大会を開催します！もちろん、前回好評だった洋楽コンサートも！海外留学の話や甲陽生の意外な一面が知れるなど、有意義な時間になること間違いなし。</p><p class="circle-text">IT'S NOW OR NEVER!</p>
