--- a/views/kateika.erb
+++ b/views/kateika.erb
@@ -24,17 +24,18 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/yatai.png" alt="屋台">
+         <img src="/assets/images/circle/kateika.webp" alt="化学部">
       </div>
       <h1 class="circle-name">
-        屋台
+        家庭科展示
       </h1>
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
-         <span class="meta-loc">中庭</span>
+         <span class="meta-loc">視聴覚室</span>
          <a href="/map" class="meta-button">マップ上で確認</a>
       </div>
    </div>
-   <p class="circle-text"></p>
+   <p class="circle-text">一年生が作った家庭科作品を展示しています</p>
+
 
 </div>
