--- a/views/kounaisousyoku.erb
+++ b/views/kounaisousyoku.erb
@@ -11,3 +11,31 @@
     }
   });
 </script>
+<script>
+      (function(d) {
+        var config = {
+          kitId: 'bsw3okh',
+          scriptTimeout: 3000,
+          async: true
+        },
+        h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+      })(document);
+    </script>
+<div class="circle-main">
+   <div class="circle-top">
+      <div class="circle-images">
+         <img src="/assets/images/circle/kounaisousyoku.png" alt="校内謎解き">
+      </div>
+      <h1 class="circle-name">
+        校内装飾
+      </h1>
+      <div class="circles-location">
+         <span class="meta-title">開催場所：</span>
+         <span class="meta-loc">校内全体</span>
+         <a href="/map" class="meta-button">マップ上で確認</a>
+      </div>
+   </div>
+   <p class="circle-text">今回のテーマ「NewEra」すなわち新時代にはどのようなイメージを持ちますか？
+SFのようなレトロフューチャーな未来、緑と高層建造物が共生しているエコな未来、色々な個性が影響し合う多様的な未来。今回はその中のSFのような近未来をコンセプトに校内を装飾しました。メインはもちろん各企画や音楽会です。しかし、それらをより引き立たせこの音楽と展覧の会を素晴らしいものとするパーツの一つとして精一杯制作したので良かったら少し足を止めて装飾を見てみてください‼️</p>
+
+</div>
