--- a/views/map.erb
+++ b/views/map.erb
@@ -243,6 +243,7 @@
                                     <div class="map-link-room">視聴覚室</div>
                                     <div class="map-link-name">
                                     <h3 class="circle_p_name yellow"><span>C-9</span></h3>
+                                    <h3 class="circle_p_name blue"><span>B-4</span></h3>
                                     </div>
                                 </div>
                             </div>
