--- a/views/tetudoudoukoukai.erb
+++ b/views/tetudoudoukoukai.erb
@@ -32,7 +32,7 @@
       <div class="circles-location">
          <span class="meta-title">開催場所：2-C</span>
          <span class="meta-loc"></span>
-         <a class="meta-button">マップ上で確認</a>
+         <a href="/map" class="meta-button">マップ上で確認</a>
       </div>
    </div>
    <div class="circle-images">
