--- a/views/unndouzyou.erb
+++ b/views/unndouzyou.erb
@@ -32,7 +32,7 @@
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
          <span class="meta-loc">運動場</span>
-         <a class="meta-button">マップ上で確認</a>
+         <a  href="/map"class="meta-button">マップ上で確認</a>
       </div>
    </div>
    <p class="circle-text">甲陽の運動場を広く使い、まとを狙ってポイントを稼ぐPKとストラックアウト、何回続くのかを競うラリー合戦の３種目が楽しめます。ラリー合戦では、甲陽生とラリーすることができます！是非お越しください！！
