--- a/views/dassyutu.erb
+++ b/views/dassyutu.erb
@@ -32,7 +32,7 @@
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
          <span class="meta-loc">2-A,2-B</span>
-         <a class="meta-button">マップ上で確認</a>
+         <a href="/map" class="meta-button">マップ上で確認</a>
       </div>
    </div>
    <p class="circle-text">あなたの小さな<span style="font-weight: bolder">"ひらめき"</span>と<span style="font-weight: bolder">"気づき"</span>が脱出成功へと導く<br>
