--- a/views/ennniti.erb
+++ b/views/ennniti.erb
@@ -32,7 +32,7 @@
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
          <span class="meta-loc">世界史教室</span>
-         <a class="meta-button">マップ上で確認</a>
+         <a href="/map" class="meta-button">マップ上で確認</a>
       </div>
    </div>
    <p class="circle-text">今年は射的、スマートボール、輪投げ、スーパーボールすくいをする予定です！打って、投げて、すくって高得点を狙って頑張ってください！お祭り気分になれて楽しめますよ！</p>
