--- a/views/jetto.erb
+++ b/views/jetto.erb
@@ -32,7 +32,7 @@
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
          <span class="meta-loc">2-D</span>
-         <a class="meta-button">マップ上で確認</a>
+         <a href="/map" class="meta-button">マップ上で確認</a>
       </div>
    </div>
    <p class="circle-text">僕たちは多大な苦難を乗り越えながら夏休みも毎日作業をして仲間と協力することで完成させることができました。</p><p class="circle-text">今回の音展の目玉、ジェットコースターにぜひみなさん乗ってみてください</p>
