--- a/views/kagakubu.erb
+++ b/views/kagakubu.erb
@@ -32,7 +32,7 @@
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
          <span class="meta-loc">化学実験室</span>
-         <a class="meta-button">マップ上で確認</a>
+         <a href="/map" class="meta-button">マップ上で確認</a>
       </div>
    </div>
    <p class="circle-text">一昨年の末に部員が0人になり、廃部となっていましたが、現在では2年生4人、一年生7人の大きな部活になりました！部員それぞれの積極的な活動の記録をどうぞ見ていってください！
