--- a/views/keionndoukoukai.erb
+++ b/views/keionndoukoukai.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/kagaku.png" alt="化学部">
+         <img src="/assets/images/circle/keionn.png" alt="化学部">
       </div>
       <h1 class="circle-name">
         軽音同好会
@@ -32,7 +32,7 @@
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
          <span class="meta-loc">1－A</span>
-         <a class="meta-button">マップ上で確認</a>
+         <a href="/map" class="meta-button">マップ上で確認</a>
       </div>
    </div>
    <p class="circle-text">熱演する音楽と情熱で、教室をライブハウスに変えます！！
