--- a/views/koukounyuusi.erb
+++ b/views/koukounyuusi.erb
@@ -32,7 +32,7 @@
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
          <span class="meta-loc"></span>
-         <a class="meta-button">マップ上で確認</a>
+         <a href="/map" class="meta-button">マップ上で確認</a>
       </div>
    </div>
    <p class="circle-text">「只今より平成三五年度甲陽学院高校入学試験を始めます。」<p>
