--- a/views/kounainazotoki.erb
+++ b/views/kounainazotoki.erb
@@ -32,7 +32,7 @@
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
          <span class="meta-loc">校内全体</span>
-         <a class="meta-button">マップ上で確認</a>
+         <a href="/map" class="meta-button">マップ上で確認</a>
       </div>
    </div>
    <p class="circle-text">校内に散りばめられた四つの謎を解いて答えの場所に辿り着こう
