--- a/views/ryokoudoukoukai.erb
+++ b/views/ryokoudoukoukai.erb
@@ -32,7 +32,7 @@
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
          <span class="meta-loc"></span>
-         <a class="meta-button">マップ上で確認</a>
+         <a href="/map" class="meta-button">マップ上で確認</a>
       </div>
    </div>
    <p class="circle-text">旅行同好会では甲陽106回生の旅好き仲間が皆さんにぜひ訪れて欲しい場所や旅行の楽しみ方などを展示し紹介しています。ぜひ今後の旅行の参考にぜひとも私たちの教室に来てください！</p>
