--- a/views/seibutubu.erb
+++ b/views/seibutubu.erb
@@ -32,7 +32,7 @@
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
          <span class="meta-loc">生物室室</span>
-         <a class="meta-button">マップ上で確認</a>
+         <a href="/map" class="meta-button">マップ上で確認</a>
       </div>
    </div>
    <p class="circle-text">今年も例年通り標本や実験の展示をします。昨年は蝶がメインでしたが今年は甲虫の展示量を増やしました。ボリューム満点なので是非生物   室に見に来てください！</p>
