--- a/views/shasinnbu.erb
+++ b/views/shasinnbu.erb
@@ -32,7 +32,7 @@
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
          <span class="meta-loc">2-C</span>
-         <a class="meta-button">マップ上で確認</a>
+         <a href="/map" class="meta-button">マップ上で確認</a>
       </div>
    </div>
    <p class="circle-text">写真部では体育祭、修学旅行など学校行事の写真や、各々が撮影した写真などを展示しています。また、今年は教室からの大阪湾を一望できる景色を撮影したタイムラプスも放映しています。
