--- a/views/shougibu.erb
+++ b/views/shougibu.erb
@@ -32,7 +32,7 @@
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
          <span class="meta-loc">日本史教室</span>
-         <a class="meta-button">マップ上で確認</a>
+         <a href="/map" class="meta-button">マップ上で確認</a>
       </div>
    </div>
    <p class="circle-text">将棋部では、全く知らない人でも楽しめる将棋体験や部員にチャレンジすることができます。</p><p class="circle-text">生徒棟3Fの日本史教室に来ない理由はありません。甲陽の藤井聡太は君だ‼️</p>
