--- a/views/supuradoukoukai.erb
+++ b/views/supuradoukoukai.erb
@@ -32,7 +32,7 @@
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
          <span class="meta-loc">化学講義室</span>
-         <a class="meta-button">マップ上で確認</a>
+         <a href="/map" class="meta-button">マップ上で確認</a>
       </div>
    </div>
    <p class="circle-text">中学から数えると今年で三年目です！新メンバーも加入して最高の盛り上がりを見せています！皆さん是非スプラトゥーンの世界をお楽しみください！</p>
