--- a/views/tirekibu.erb
+++ b/views/tirekibu.erb
@@ -32,7 +32,7 @@
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
          <span class="meta-loc">1-C</span>
-         <a class="meta-button">マップ上で確認</a>
+         <a href="/map" class="meta-button">マップ上で確認</a>
       </div>
    </div>
      <p class="circle-text">今年の地歴部では、北方四島の立体模型の設置や灘高地歴部との合同企画の展示を行います。教室には、部誌も設置します。</p>
