--- a/views/layout.erb
+++ b/views/layout.erb
@@ -46,6 +46,7 @@
               <li><a href="/" class="none lia"><p>Home</p></a></li>
               <li><a href="/message" class="none">Message</a></li>
               <li><a href="/access"class="none">Access</a></li>
+              <li><a href="/map"class="none">Map</a></li>
               <li><a href="/timetable"class="none">Timetable</a></li>
               <li><a href="/circle" class="none">Circle</a></li>
               <li><a href="/member" class="none">Member</a></li>
