中央ステージ

--- a/views/circle.erb
+++ b/views/circle.erb
@@ -301,7 +301,7 @@
             </h3>
             <div class="circle-bot">
             <p>
-              <img src="/assets/images/circle/monyumento.jpg" class="circle-img">
+              <img src="/assets/images/circle/tyuusute.png" class="circle-img">
             </p>
             <div class="booth-detail">
             <ul class="circle-ul">
