--- a/views/tyuuou.erb
+++ b/views/tyuuou.erb
@@ -11,3 +11,21 @@
     }
   });
 </script>
+<div class="circle-main">
+   <div class="circle-top">
+      <div class="circle-images">
+         <img src="/assets/images/circle/tyuusute.png" alt="運動場企画">
+         </div>
+         <h1 class="circle-name">
+           運動場企画
+         </h1>
+         <div class="circles-location">
+            <span class="meta-title">開催場所：</span>
+            <span class="meta-loc">中庭</span>
+            <a  href="/map"class="meta-button">マップ上で確認</a>
+         </div>
+      </div>
+      <p class="circle-text">歌やダンスなど、生徒たちがいろんな出し物をします！</p>
+      <p class="circle-text">盛り上がること間違いなし！ぜひ中庭の中央ステージへお越しください!!</p>
+   
+   </div>
