--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -43,7 +43,7 @@
             <th class="time-nonl positionsticky"></th>
             <td class="time-title positionsticky"><a href="/pcdoukoukai">物理講義室</a></td>
             <td class="time-title positionsticky" ><a href="/ongakukai">講堂</a></td>
-            <td class="time-title positionsticky">中央<br>ステージ</td>
+            <td class="time-title positionsticky"><a href="/tyuuou">中央<br>ステージ</a></td>
             <td class="time-title positionsticky">バンド</td>
             <td class="time-title positionsticky">ルーム<br>コンサート</td>
             <td class="time-title positionsticky"><a href="/dassyutu">2A<br>脱出ゲーム</a></td>
