マップスマホ用にデザイン作成

--- a/public/assets/css/layout.css
+++ b/public/assets/css/layout.css
@@ -6,7 +6,10 @@
   background-attachment: fixed;
   margin-top:50px;
 }
-
+body{
+    overflow-x: hidden;
+    overflow-y: auto;
+}
 .title-img{
   height: 200px;
   width: 560px;
