--- a/views/map.erb
+++ b/views/map.erb
@@ -30,8 +30,10 @@
     <img src="/assets/images/titles/map.webp" class="title-img">
     </div>
     <div class="map-main">
+      <div class="nazo">
         <h1 class="map-title">校内地図</h1>
         <div class="map">
+        <div class="map-scroll">
             <div class="map-image">
                 <div id="map-content1" class="map-content" style="display: block;">
                 <div class="map-scroll">
@@ -268,6 +270,8 @@
             <%# <button class="button" onclick="showDiv(6)" id="button6">運動場</button> %>
             </div>
         </div>
+        </div>
+      </div>
     </div>
 
 
