--- a/public/assets/css/access.css
+++ b/public/assets/css/access.css
@@ -20,15 +20,7 @@
     width: 100%;
     height: 100px;
   }
-  .button {
-    width: calc(50% - 2px); /* borderの厚みを引いておく*/
-    height: calc(100% - 2px);
-    text-align: center;
-    border: 1px solid white;
-  float: left;
-    color: black;
-    background-color: white;
-  }
+  
   .button.clicked {
     color: black;
     background-color: white;
@@ -65,6 +57,17 @@
     margin:0 auto;
     width:800px;
   }
+  @media screen and (min-width: 481px){
+    .button {
+      width: calc(50% - 2px); /* borderの厚みを引いておく*/
+      height: calc(100% - 2px);
+      text-align: center;
+      border: 1px solid white;
+    float: left;
+      color: black;
+      background-color: white;
+    }
+  }
   @media screen and (max-width: 480px){
   .inframe{
     width:330px;
@@ -84,5 +87,14 @@
   .access-middle{
     width:90%;
     margin:0 auto;
+  }
+  .button {
+    width: calc(50% - 2px); /* borderの厚みを引いておく*/
+    /* height: calc(100% - 2px); */
+    text-align: center;
+    border: 1px solid white;
+  float: left;
+    color: black;
+    background-color: white;
   }
   }
